# goof

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  main.cpp  spec.md
lexer/: lexer.cpp  lexer.hpp
logging/: logging.cpp  logging.hpp
parser/: parser.cpp  parser.hpp
tests/: CMakeLists.txt  README  test.cpp
